--- a/index.html
+++ b/index.html
@@ -7,7 +7,60 @@
   <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
 <body>
-  
+  <section class="menu">
+    <div class="title">
+      <h2>Food Menu</h2>
+      <div class="underline"></div>
+    </div>    
+
+    <div class="btn-container">
+      <!-- <button type="button" class="filter-btn" data-id="all">all</button>
+      <button type="button" class="filter-btn" data-id="breakfast">breakfast</button>
+      <button type="button" class="filter-btn" data-id="lunch">lunch</button>
+      <button type="button" class="filter-btn" data-id="shake">shake</button> -->
+      <!-- 동적으로 js로 만들어줌 -->
+    </div>
+
+    <div class="section-center">
+      <!-- <article class="menu-item">
+        <img src="./images/item-1.jpeg" alt="menu item" class="photo"/>
+         <div class="item-info">
+          <div class="header">
+            <h4>buttermilk pancakes</h4>
+            <h4 class="price">2000원</h4>
+          </div>
+          <p class="item-text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt quam expedita, fugit accusamus labore, blanditiis numquam, nihil quaerat at aut dignissimos itaque error nisi facilis. Doloremque cum aliquid eaque consequatur.
+          </p>
+         </div>
+      </article>
+      <article class="menu-item">
+        <img src="./images/item-1.jpeg" alt="menu item" class="photo"/>
+         <div class="item-info">
+          <div class="header">
+            <h4>buttermilk pancakes</h4>
+            <h4 class="price">2000원</h4>
+          </div>
+          <p class="item-text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt quam expedita, fugit accusamus labore, blanditiis numquam, nihil quaerat at aut dignissimos itaque error nisi facilis. Doloremque cum aliquid eaque consequatur.
+          </p>
+         </div>
+      </article>
+      <article class="menu-item">
+        <img src="./images/item-1.jpeg" alt="menu item" class="photo"/>
+         <div class="item-info">
+          <div class="header">
+            <h4>buttermilk pancakes</h4>
+            <h4 class="price">2000원</h4>
+          </div>
+          <p class="item-text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt quam expedita, fugit accusamus labore, blanditiis numquam, nihil quaerat at aut dignissimos itaque error nisi facilis. Doloremque cum aliquid eaque consequatur.
+          </p>
+         </div>
+      </article> -->
+    </div>
+  </section>
+
   <script src="./script.js"></script>
 </body>
 </html>
